# robot-api

./: .gitignore  README.md  pyproject.toml  robots.db
.github/workflows/: python-app.yml  static.yml
robot_api/: __init__.py  __main__.py  api.py  database.py  models.py
tests/acceptance/: api-robot-simplified.robot  api.robot  python-api-demo.robot
tests/resources/: API.py  api.resource
tests/unit/: RobotDatabase.py  database.robot
